<resources>
    <string name="app_name">eDoctor</string>
    <string name="sign_in_as_patient">Sign In as Patient</string>
    <string name="button1">Button1</string>
    <string name="sign_in_as_doctor">Sign In as Doctor</string>
    <string name="register">RegisterD</string>
    <string name="email">Email:</string>
    <string name="emailD">Email:</string>
    <string name="nameD">Name:</string>
    <string name="phone_numberD">Phone Number:</string>
    <string name="create_passwordD">Create passWord:</string>
    <string name="date_of_birthD">Date of Birth:</string>
    <string name="sexD">Sex:</string>
    <string name="buttonL">Button</string>
    <string name="do_not_have_an_edoctor_accountL">Do not have an eDoctor Account?</string>
    <string name="email_or_phoneL">Email or Phone:</string>
    <string name="passwordL">Password:</string>
    <string name="register_hereL">Register Here</string>
    <string name="do_not_have_an_edoctor_account">Do not Have an eDoctor Account?</string>
    <string name="email_or_phone">Email or Phone:</string>
    <string name="log_in">Log In</string>
    <string name="password">Password:</string>
    <string name="register_here">Register Here</string>
    <string name="create_passwordP">Create Password:</string>
    <string name="date_of_birthP">Date of Birth:</string>
    <string name="emailP">Email:</string>
    <string name="mobile_numberP">Mobile Number:</string>
    <string name="nameP">Name</string>
    <string name="sexP">Sex:</string>
    <string name="namePp">Name:</string>
    <string name="registerP">Register</string>
    <string name="title_activity_patient_home_page">PatientHomePage</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_home_page4_patient">HomePage4Patient</string>
    <string name="dateDoc">Date</string>
    <string name="submitDoc">Submit</string>
    <string name="proceed">Proceed</string>
    <string name="registerD">Register</string>
    <string name="ok">OK</string>
    <string name="log_inD">Log In</string>
    <string name="doctor_s_name">Doctor\'s Name</string>
    <string name="doctor_s_designation">Doctor\'s Designation</string>
    <string name="search_doctor">Search Doctor</string>
    <string name="select_your_city">Select Your City:</string>
    <string name="sex">Sex:</string>
    <string name="your_disease">Your Disease:</string>
    <string name="textview">TextView</string>
    <string name="textviewD">TextView</string>
    <string name="textviewDc">TextView</string>
    <string name="textviewdc">TextView</string>
    <string name="doctor_s_chember_location">Doctor\'s Chember Location</string>
    <string name="doctor_1">Doctor 1</string>
    <string name="doctor_s_designation1">Doctor\'s Designation1</string>
    <string name="btproceed2doc1">Proceed</string>
    <string name="doctor_s_slot_are_here">Doctor\'s Slot are Here</string>
    <string name="slot_3">SLot 3</string>
    <string name="selected_date_by_doctor">Selected Date by Doctor</string>
    <string name="slot_1">Slot 1</string>
    <string name="slot_2">Slot 2</string>
    <string name="confirm_your_phone_number">Confirm Your Phone Number</string>
    <string name="okphonenum">Ok</string>
    <string name="booking_success">Booking Success</string>
    <string name="okConfirmed">Ok</string>
    <string name="thank_you_sir_for_choosing_edoctor_our_team_will_call_you_soon">Thank You Sir For choosing eDoctor, Our team will call you soon</string>
    <string name="this_is_a_application_developed_by_sust_cse_250_project_work_this_application_will_help_the_patient_to_rech_the_doctor_within_a_few_moments">This is a Application developed by SUST CSE 250 Project work. This Application will help the patient to rech the doctor within a few moments.</string>
    <string name="this_is_a_application_developed_by_sust_cse_250_project_work_this_application_will_help_the_patient_to_reach_the_doctor_within_a_few_moments">This is a Application developed by SUST CSE 250 Project work. This Application will help the patient to reach the doctor within a few moments.</string>
</resources>
