<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.iftek.edoctor.RegistrationDoctor">

    <EditText
        android:id="@+id/etDocNameR"
        android:layout_width="350sp"
        android:layout_height="40sp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/nameD"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/etDocPhoneR" />

    <EditText
        android:id="@+id/etDocPhoneR"
        android:layout_width="350sp"
        android:layout_height="40sp"
        android:layout_below="@+id/etDocNameR"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/phone_numberD"/>

    <EditText
        android:id="@+id/etDocEmailR"
        android:layout_width="350sp"
        android:layout_height="40sp"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/emailD"
        android:layout_below="@+id/etDocPhoneR"
        android:layout_alignStart="@+id/etDocPhoneR" />

    <EditText
        android:id="@+id/etDocPassR"
        android:layout_width="350sp"
        android:layout_height="40sp"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:inputType="numberPassword"
        android:hint="@string/create_passwordD"
        android:layout_below="@+id/etDocEmailR"
        android:layout_alignStart="@+id/etDocEmailR" />

    <EditText
        android:id="@+id/etDocDoBR"
        android:layout_width="350sp"
        android:layout_height="40sp"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/date_of_birthD"
        android:layout_below="@+id/etDocPassR"
        android:layout_alignStart="@+id/etDocSR" />

    <EditText
        android:id="@+id/etDocSR"
        android:layout_width="350sp"
        android:layout_height="40sp"
        android:layout_below="@+id/etDocDoBR"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/sexD" />

    <Button
        android:id="@+id/btDocR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etDocSR"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/registerD" />

</RelativeLayout>
