<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.iftek.edoctor.LoginPatient">

    <EditText
        android:id="@+id/etPatEmailL"
        android:layout_width="350sp"
        android:layout_height="40sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="162dp"
        android:ems="10"
        android:hint="@string/email_or_phone"
        android:inputType="textEmailAddress|phone" />

    <EditText
        android:id="@+id/etPatPassL"
        android:layout_width="350sp"
        android:layout_height="40sp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btPatL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPatPassL"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:text="@string/log_in" />

    <TextView
        android:id="@+id/tvShow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btPatL"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/do_not_have_an_edoctor_account" />

    <TextView
        android:id="@+id/tvPatRegdHereL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvShow1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/register_here"
        android:textStyle="bold"/>
</RelativeLayout>
