<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.iftek.edoctor.Doctor1">

    <TextView
        android:id="@+id/tvDoc1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:textSize="30sp"
        android:text="@string/doctor_1"
        android:layout_below="@+id/ivDoc1"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/ivDoc1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"

        app:srcCompat="@mipmap/ic_launcher"
        android:contentDescription=""
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvDocotrDesignation1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDoc1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:textSize="20sp"
        android:text="@string/doctor_s_designation1" />

    <TextView
        android:id="@+id/tvDoctorLocation1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:textSize="20sp"

        android:text="@string/doctor_s_chember_location"
        android:layout_below="@+id/tvDocotrDesignation1"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btProceed2Doc1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btproceed2doc1"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="63dp" />
</RelativeLayout>
