<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.iftek.edoctor.Confirm">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="67dp"
        android:textStyle="bold"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:text="@string/thank_you_sir_for_choosing_edoctor_our_team_will_call_you_soon"
        android:layout_below="@+id/tvBookSuccess"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tvBookSuccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/booking_success"
        android:textSize="36sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btConfirmed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="84dp"
        android:text="@string/okConfirmed" />


</RelativeLayout>
